# BackendBiometrias

./: docker-compose.yml
biometria_oreja/: .dockerignore  CMakeLists.txt  Dockerfile  biomertria_oreja_2.h
biometria_oreja/apps/: exit_map.cpp  exit_map.h  proc_utils.cpp  proc_utils.h  report_format.cpp  report_format.h  server_env.cpp  server_env.h  server_utils.cpp  server_utils.h  servidor.cpp
biometria_oreja/apps/analisis/: evaluar_metricas_tecnicas.cpp
biometria_oreja/apps/entrenamiento/: calcular_umbrales_1_1.cpp  entrenar_svm.cpp  evaluar_template.cpp  procesar_dataset.cpp  procesar_dataset_secuencial.cpp
biometria_oreja/apps/gestor_usuarios/: agregar_usuario.cpp  agregar_usuario_biometria.cpp  reentrenar_svm_incremental.cpp
biometria_oreja/apps/produccion/: evaluar_batch_qc.cpp  predecir.cpp
biometria_oreja/apps/visualizacion/: curva_aprendizaje.cpp  procesar_imagen.cpp
biometria_oreja/build-linux/: CMakeCache.txt  Makefile  agregar_usuario  agregar_usuario_biometria  calcular_umbrales_1_1  cmake_install.cmake  curva_aprendizaje  entrenar_svm  entrenar_svm_rbf  evaluar_batch_qc  evaluar_metricas_tecnicas  predecir  procesar_dataset  procesar_dataset_secuencial  procesar_imagen  reentrenar_svm  servidor
biometria_oreja/include/: cargar_imagen.h
biometria_oreja/include/admin/: admin_config.h  admin_log_helpers.h  admin_report.h  admin_time.h  admin_types.h
biometria_oreja/include/extraccion_caracteristicas/: lbp.h
biometria_oreja/include/metricas/: consolidar_tecnicas.h  curva_aprendizaje.h  metricas.h  rendimiento.h  svm_metricas.h
biometria_oreja/include/preprocesamiento/: ajuste_iluminacion.h  alineacion_oreja.h  aumentar_dataset.h  bilateral_filter.h  clahe.h  convertir_a_gris.h  filtro_bilateral.h  mejoras_preprocesamiento.h  redimensionar_imagen.h
biometria_oreja/include/svm/: cargar_csv.h  svm_entrenamiento.h  svm_prediccion.h
biometria_oreja/include/utilidades/: dataset_loader.h  dividir_dataset.h  guardar_csv.h  guardar_pgm.h  lda_utils.h  logger.h  normalizacion.h  pca_utils.h  svm_ova_utils.h  zscore_params.h
biometria_oreja/models/current/: caracteristicas_pca.csv  log_agregar_usuario_biometria.txt  mapa_etiquetas.txt  modelo_svm.svm  rendimiento_fases_main.csv
biometria_oreja/models/current/rendimiento_fases_workers/: worker_1.csv  worker_7.csv
biometria_oreja/models/v1/: caracteristicas_pca.csv  confusion_matrix.csv  modelo_svm.svm
biometria_oreja/models/v1/rendimiento_fases_workers/: worker_5.csv  worker_6.csv  worker_8.csv
biometria_oreja/models/v2/: log_agregar_usuario_biometria.txt  metricas_por_clase.csv  rendimiento_fases.csv
biometria_oreja/models/v2/rendimiento_fases_workers/: worker_3.csv  worker_4.csv  worker_9.csv
biometria_oreja/models/v3/: caracteristicas_lda_train.csv  templates_k1.csv
biometria_oreja/models/v3/versiones/20260128_160940/: caracteristicas_lda_train.csv  templates_k1.csv
biometria_oreja/models/v3/versiones/20260129_021017/: caracteristicas_lda_train.csv
biometria_oreja/models/v3/versiones/20260129_031314/: caracteristicas_lda_train.csv  templates_k1.csv
biometria_oreja/models/v3/versiones/20260129_035645/: caracteristicas_lda_train.csv  templates_k1.csv
biometria_oreja/models/v3/versiones/20260129_043122/: caracteristicas_lda_train.csv  templates_k1.csv
biometria_oreja/models/v3/versiones/20260129_045045/: templates_k1.csv
biometria_oreja/models/v4/: caracteristicas_lda_test.csv  caracteristicas_pca.csv  modelo_svm.svm  rendimiento.csv
biometria_oreja/models/v4/rendimiento_fases_workers/: worker_0.csv  worker_10.csv  worker_2.csv
biometria_oreja/src/: cargar_imagen.cpp
biometria_oreja/src/admin/: admin_config.cpp  admin_log_helpers.cpp  admin_report.cpp  admin_time.cpp
biometria_oreja/src/extraccion_caracteristicas/: lbp.cpp
biometria_oreja/src/metricas/: consolidar_tecnicas.cpp  curva_aprendizaje.cpp  metricas.cpp  rendimiento.cpp  svm_metricas.cpp
biometria_oreja/src/preprocesamiento/: ajuste_iluminacion.cpp  alineacion_oreja.cpp  aumentar_dataset.cpp  bilateral_filter.cpp  clahe.cpp  convertir_a_gris.cpp  filtro_bilateral.cpp  mejoras_preprocesamiento.cpp  redimensionar_imagen.cpp
biometria_oreja/src/svm/: cargar_csv.cpp  svm_entrenamiento.cpp  svm_prediccion.cpp
biometria_oreja/src/utilidades/: dataset_loader.cpp  dividir_dataset.cpp  guardar_csv.cpp  guardar_pgm.cpp  lda_utils.cpp  logger.cpp  normalizacion.cpp  pca_utils.cpp  svm_ova_utils.cpp  zscore_params.cpp
biometria_voz/voz/: CMakeLists.txt  Readme.txt
biometria_voz/voz/apps/: servidor_biometrico.cpp
biometria_voz/voz/apps/controller/: frases_controller.cpp  frases_controller.h  sync_controller.cpp  sync_controller.h  usuario_controller.cpp  usuario_controller.h
biometria_voz/voz/apps/mobile/: mobile_api.cpp  mobile_api.h  sqlite_adapter.cpp  sqlite_adapter.h
biometria_voz/voz/apps/service/: autenticacion_service.cpp  autenticacion_service.h  frases_service.cpp  frases_service.h  listar_service.cpp  listar_service.h  registrar_service.cpp  registrar_service.h  sincronizacion_service.cpp  sincronizacion_service.h
biometria_voz/voz/apps/testeo/: entrenar_modelo.cpp  evaluarModelo.cpp  procesar_dataset.cpp
biometria_voz/voz/apps/testeo/asr-docker/: apiPostgres.cpp  asr_server.cpp  test_asr.cpp
biometria_voz/voz/core/asr/: similaridad.cpp  similaridad.h  whisper_asr.cpp  whisper_asr.h
biometria_voz/voz/core/augmentation/: audio_augmentation.cpp  audio_augmentation.h
biometria_voz/voz/core/classification/: svm.h  svm_core.cpp  svm_io.cpp  svm_utils.cpp
biometria_voz/voz/core/features/: mfcc.cpp  mfcc.h
biometria_voz/voz/core/load_audio/: audio_io.cpp  audio_io.h  libs.cpp
biometria_voz/voz/core/pipeline/: audio_pipeline.cpp  audio_pipeline.h
biometria_voz/voz/core/preprocessing/: normalization.cpp  preprocesar.h  vad.cpp
biometria_voz/voz/core/process_dataset/: dataset.h  dataset_io.cpp  dataset_split.cpp  dataset_utils.cpp
biometria_voz/voz/core/segmentation/: stft.cpp  stft.h
biometria_voz/voz/utils/: additional.h  audio_export.cpp  audio_export.h  config.h  http_helpers.h
(+22 files in other folders)
